# demtools

./: README.md  pyproject.toml
.github/workflows/: testing.yml
demtools/: __init__.py  grids.py  mathlib.py
demtools/data/: int.tif  testdem.tif
docs/: api.rst  conf.py  index.rst
tests/: conftest.py  test_demtools.py
