[project]
name = "demtools"
version = "0.1.0"
description = "Python package to manipulate and analyze DEM grids"
readme = "README.md"
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "rasterio",
    "affine",
    "geojson",
    "scikit-learn",
    "colorcet",
]

[project.optional-dependencies]
extra = ["jupyterlab"]
tests = ["pytest", "pytest-cov", "nbval"]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]
dev = [
    "demtools[extra,tests,docs]",
    "black",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
extend-exclude = '''.*ui_.*'''

[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
